# data-structures-algorithms

./: .gitignore
data_structures/: CMakeLists.txt
data_structures/include/: Error_code.h  LinkedList.h  Node.h  Queue.h  Stack_LL.h
data_structures/src/: Node.cpp  Queue.cpp  Stack_LL.cpp  playground.cpp
examples/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  b.cpp
projects/airport-sim/: .gitignore  CMakeLists.txt
projects/airport-sim/include/: Plane.h  Queue.h  Random.h  Runway.h  helper_functions.h
projects/airport-sim/src/: Plane.cpp  Queue.cpp  Random.cpp  Runway.cpp  main.cpp
projects/postfix-calculator/: CMakeLists.txt
viikko-10/: CMakeLists.txt
viikko-11/: CMakeLists.txt
viikko-11/teht-1/include/: Node.h
viikko-11/teht-1/src/: Node.cpp  Queue.cpp  main.cpp
viikko-11/teht-2/include/: Extended_queue.h  Queue.h
viikko-11/teht-2/src/: Extended_queue.cpp  main.cpp
viikko-11/teht-3/include/: Extended_queue.h
viikko-11/teht-3/src/: Extended_queue.cpp  Queue.cpp  main.cpp
viikko-3/: CMakeLists.txt
viikko-3/teht-1/include/: Life.h  Utility.h
viikko-3/teht-1/src/: Life.cpp  Utility.cpp  main.cpp
viikko-3/teht-2/include/: Utility.h
viikko-3/teht-2/src/: Life.cpp  main.cpp
viikko-3/teht-3/include/: Life.h
viikko-3/teht-3/src/: Life.cpp
viikko-4/: CMakeLists.txt  configuration.txt
viikko-4/teht-4/include/: Life.h  Utility.h
viikko-4/teht-4/src/: Life.cpp  Utility.cpp  main.cpp
viikko-4/teht-5/include/: Life.h
viikko-4/teht-5/src/: Life.cpp
viikko-4/teht-6/include/: Life.h
viikko-4/teht-6/src/: Life.cpp  main.cpp
viikko-4/teht-7/include/: Life.h
viikko-4/teht-7/src/: Life.cpp  main.cpp
viikko-5/: CMakeLists.txt
viikko-5/teht-1/: teht-1a.cpp  teht-1b.cpp  teht-1c.cpp
viikko-5/teht-3/: main.cpp
viikko-5/teht-4/: main.cpp
viikko-5/teht-5/include/: Extended_stack.h
viikko-5/teht-5/src/: main.cpp
viikko-6/: CMakeLists.txt
viikko-7/: CMakeLists.txt
viikko-7/teht1/src/: Extended_queue.cpp  main.cpp
viikko-7/teht3/include/: Extended_stack.h  Queue.h
viikko-7/teht3/src/: Extended_stack.cpp  Queue.cpp  main.cpp
viikko-7/teht4/include/: Extended_queue.h  Extended_stack.h  Queue.h
viikko-7/teht4/src/: Extended_queue.cpp  Queue.cpp  main.cpp
viikko-8/: CMakeLists.txt
(+10 files in other folders)
