cmake_minimum_required(VERSION 3.25)
project(viikko_4)

set(CMAKE_CXX_STANDARD 20)

add_executable(teht_4 teht-4/src/Life.cpp teht-4/src/main.cpp teht-4/src/Utility.cpp)
add_executable(teht_5 teht-5/src/Life.cpp teht-5/src/main.cpp teht-5/src/Utility.cpp)
add_executable(teht_6 teht-6/src/Life.cpp teht-6/src/main.cpp teht-6/src/Utility.cpp)
add_executable(teht_7 teht-7/src/Life.cpp teht-7/src/main.cpp)
