cmake_minimum_required(VERSION 3.25)
project(viikko_5)

set(CMAKE_CXX_STANDARD 20)

add_executable(teht_1a teht-1/teht-1a.cpp)
add_executable(teht_1b teht-1/teht-1b.cpp)
add_executable(teht_1c teht-1/teht-1c.cpp)
add_executable(teht_3 teht-3/main.cpp)
add_executable(teht_4 teht-4/main.cpp)
add_executable(teht_5 teht-5/src/main.cpp teht-5/src/Extended_stack.cpp)
